fix content overflow

--- a/src/app/components/support.less
+++ b/src/app/components/support.less
@@ -3,7 +3,7 @@
   top: 10px;
   left: 10px;
   width: 300px;
-  height: 460px;
+  margin-bottom: 20px;
   padding: 20px;
   text-align: center;
   background-color: #FFF;
